tests/src/frontend/typechecking/invalid/constraint_extends.sk
trait X
base class Y<T: X>
class Z<T>() extends Y<T>

fun foo<T>(Z<T>): void {
  void
}
